<resources>
    <string name="app_name">Agricultural Mobile Application For Farmers</string>
    <string name="app_short_name">AMAFF</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_weather">Weather</string>
    <string name="title_about">About</string>
    <string name="title_camera">Camera</string>

    <string name="first_name_label">First Name: %s</string>
    <string name="last_name_label">Last Name: %s</string>
    <string name="email_label">Email: %s</string>
    <string name="date_created_label">Date Created: %s</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="mobile_number">Mobile No.</string>
    <string name="save_profile">Save Profile</string>
    <string name="welcome">Welcome</string>
    <string name="current_weather">24°C</string>
    <string name="degree_sign">°</string>
    <string name="temperature">Temperature</string>
    <string name="crop_list">Crop List</string>
    <string name="didn_t_have_an_account_yet">Didn\'t have an account yet?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="today">Today</string>
    <string name="your_crops">Your Crops</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maximum classified results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum classified results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of classified image
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of classified image
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string name="default_threshold">0.50</string>
    <string name="default_inference_time">0ms</string>
    <string name="default_max_results">3</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientNet Lite0</item>
        <item>EfficientNet Lite1</item>
        <item>EfficientNet Lite2</item>
    </string-array>

</resources>