<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/plant"
        android:title="@string/your_crops" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_weather"
        android:visible="false" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_about"
        android:visible="false" />





</menu>